spade-tests/src/snapshots/spade_tests__parser__stage_outside_pipeline.snap
---
source: spade-tests/src/parser.rs
---
entity main(x: X) -> int<8> {
    reg;
}


error: Stage outside pipeline
  ┌─ testinput:2:5
  │
2 │     reg;
  │     ^^^ stage is not allowed here
  │
  = Stages are only allowed in the root block of a pipeline


